# Centaurus

./: .gitignore  .gitmodules  CMakeLists.txt  CodeGenEM64T.cpp  CodeGenEM64T.hpp  DFAGenX86.cpp  IPCMaster.hpp  JitParser.cpp  JitParser.hpp  LICENSE  Makefile  README.md  atn.cpp  atn.hpp  bench.sh  catn.hpp  catn2.cpp  catn2.hpp  cfgraph.hpp  charclass.cpp  charclass.hpp  codegen.hpp  dfa.hpp  exception.hpp  grammar.hpp  identifier.hpp  index_vector.hpp  json.cgr  ldfa.hpp  lnfa.hpp  lookahead.hpp  main.cpp  nfa.hpp  reparser.hpp  run_bench.sh  sdfa.hpp  stream.hpp  util.cpp  util.hpp
MsTestEmulator/: CMakeLists.txt  README.md
MsTestEmulator/include/: CppUnitTest.h  SDKDDKVer.h
MsTestEmulator/runner/: main.cpp
MsTestEmulator/scripts/: run.sh
PythonApp1/: CodeGen.py  CoreLib.py  Grammar.py  PythonApp1.py  PythonApp1.pyproj  Runner.py  bench.py  bench2.py  bench_xml.py  citylots.py  citylots_opt2.py  dblp.py  dblp_opt.py  drybench.py  run_pybench.sh  simple_test.py  unittest1.py
PythonApp1/Centaurus/: CodeGen.py  Context.py  CoreLib.py  Exception.py  Grammar.py  Listener.py  Logger.py  Runner.py  Semantics.py  __init__.py
PythonApp1/centaurus/: context.py  corelib.py  listener.py
UnitTest1/: CATNLoader.hpp  CMakeLists.txt  CodeGenTest.cpp  DFATest.cpp  GrammarTest.cpp  JITTest.cpp  LDFATest.cpp  NFATest.cpp  TestDataLoader.hpp  UnitTest1.vcxproj  UnitTest1.vcxproj.filters  loggerstream.hpp  stdafx.h  unittest1.cpp
benchmarks/: bench1.cpp  bench2.cpp  citylots.cpp  citylots_opt2.cpp  dblp.cpp  dblp_opt.cpp  dry.cpp
benchmarks/cpp/: calc.cpp  citylots.cpp  citylots_opt2.cpp  citylots_std.cpp  dblp.cpp  dblp_opt.cpp  dry.cpp  memory_input.hpp  pugixml_load_file.cpp  pugixml_load_mmap.cpp  rapidjson_load_file.cpp  rapidjson_load_mmap.cpp  rapidjson_read.cpp  run_bench.sh  run_dry-bench.sh  run_load-bench.sh
benchmarks/python/: bench3.py  citylots.py  citylots_opt.py  citylots_opt2.py  dblp.py  dblp_opt.py  dblp_std.py  drybench.py  json_load.py  run_load-bench.sh  run_pybench.sh  xml_load.py
datasets/: README.md  dblp-2019-06-02.xml.culprit  multiply_citylots.sh  multiply_dblp.sh
grammar/: citylots.cgr  citylots2.cgr  dblp.cgr  dblp_schema.cgr  json.cgr  json2.cgr  lua.cgr  xml.cgr
grammars/: calc.cgr  citylots.cgr  citylots_eager.cgr  dblp.cgr  json.cgr  lua.cgr
python/: module.cpp  setup.py
src/: ATN.cpp  ATN.hpp  ATN2.hpp  ATNTranslator.hpp  BaseListener.hpp  BaseRunner.hpp  CharClass.cpp  CharClass.hpp  Charset.hpp  CodeGenCommonEM64T.hpp  CodeGenEM64T.cpp  CodeGenEM64T.hpp  CodeGenInterface.hpp  CodeGenUtilsEM64T.hpp  CompositeATN.cpp  CompositeATN.hpp  Context.hpp  DFA.hpp  Encoding.hpp  Exception.hpp  Factory.cpp  Grammar.cpp  Grammar.hpp  Grammar2.hpp  IPCCommon.hpp  IPCMaster.hpp  IPCSlave.hpp  Identifier.hpp  Identifier2.hpp  Input.hpp  LookaheadDFA.hpp  MasterParser.hpp  NFA.hpp  Platform.hpp  SlaveParser.hpp  Stage1Parser.hpp  Stage1Runner.cpp  Stage1Runner.hpp  Stage2Parser.hpp  Stage2Runner.cpp  (+14 more)
src/core/: ATN.hpp  BaseRunner.hpp  CharClass.cpp  CodeGenEM64T.hpp  CodeGenInterface.hpp  CompositeATN.cpp  Context.hpp  DFA.hpp  Input.hpp  LookaheadDFA.hpp  NFA.hpp  Platform.hpp  PtrRange.hpp  Stage1Runner.hpp  Stage2Runner.hpp  Stage2RunnerNonRecursive.hpp  Stage3RunnerNonRecursive.hpp  StageRunners.hpp
src/pydll/: PyCentaurus.cpp
src/python/centaurus/: listener.py
src/tool/: main.cpp
tests/: CATNLoader.hpp  CMakeLists.txt  CodeGenTest.cpp  DFATest.cpp  GrammarTest.cpp  JITTest.cpp  LDFATest.cpp  NFATest.cpp  unittest1.cpp
vc/: Centaurus.sln  Centaurus.vcxproj  Centaurus.vcxproj.filters  PyCentaurus.vcxproj  PyCentaurus.vcxproj.filters  PythonApp1.pyproj  StandardBuild.props  UnitTest1.vcxproj  UnitTest1.vcxproj.filters  stdafx.cpp  stdafx.h
vc/PyCentaurus/: PyCentaurus.cpp  PyCentaurus.vcxproj  PyCentaurus.vcxproj.filters  stdafx.cpp  stdafx.h
